2010-03-26  Sam Steingold  <sds@gnu.org>

	* condition.lisp (prompt-for-new-value): EVAL the value entered by
	the user

2010-03-25  Sam Steingold  <sds@gnu.org>

	* modules/libsvm/configure.in: on ubuntu libsvm is managed by
	pkg-config which seems rather silly because there is no real
	connection between gnome and libsvm;
	we must support both pkg-config and non-pkg-config installations

2010-03-24  Sam Steingold  <sds@gnu.org>

	* modules/libsvm/libsvm.lisp: remove DEFAULT-FOREIGN-LIBRARY

2010-03-24  Sam Steingold  <sds@gnu.org>

	* m4/general.m4 (CL_MODULE_COMMON_CHECKS): require CL_PROG_LN_S
	* modules/berkeley-db/Makefile.in, modules/clx/new-clx/Makefile.in:
	* modules/dbus/Makefile.in, modules/dirkey/Makefile.in:
	* modules/fastcgi/Makefile.in, modules/gdbm/Makefile.in:
	* modules/gtk2/Makefile.in, modules/i18n/Makefile.in:
	* modules/libsvm/Makefile.in, modules/oracle/Makefile.in:
	* modules/pari/Makefile.in, modules/pcre/Makefile.in:
	* modules/postgresql/Makefile.in, modules/rawsock/Makefile.in:
	* modules/readline/Makefile.in, modules/regexp/Makefile.in:
	* modules/syscalls/Makefile.in, modules/wildcard/Makefile.in:
	* modules/zlib/Makefile.in: use @LN@ and @LN_S@

2010-03-24  Sam Steingold  <sds@gnu.org>

	* modules/libsvm/Makefile.in, modules/libsvm/link.sh: restore
	TO_PRELOAD, necessary because of DEF-CALL-IN in libsvm.lisp

2010-03-22  Sam Steingold  <sds@gnu.org>

	* modules/libsvm: remove the upstream sources; install locally and
	pass --with-libsvm-prefix to the top-level configure instead
	* Makefile.devel (MODULES): add libsvm

2010-03-22  Sam Steingold  <sds@gnu.org>

	* modules/libsvm: upgrade to upstream 2.90

2010-03-19  Sam Steingold  <sds@gnu.org>

	* modules/gdbm/gdbm.c (GDBM-VERSION): cache return value

2010-03-19  Sam Steingold  <sds@gnu.org>

	* utils/modprep.lisp (print-tables-1): when OBJDEF-INIT is
	STRINGIFY(FOO), print it as "\"~S\"" to use the quoted CPP definition

2010-03-19  Sam Steingold  <sds@gnu.org>
